# plasflow2.0

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/test/: kpneu_fragmented_predictions.tsv  kpneu_predictions.tsv
docker/: Dockerfile
scripts/: build_dataset.py  build_taxonomy_db.py  download_and_assemble.sh  download_databases.py  download_metagenome.py  download_metagenome_assemblies.py  download_refseq_archaea.py  download_refseq_chromosomes.py  fragment_fasta.py  prepare_plasmid_db.py  retrain_with_more_chromosomes.sh  setup_and_assemble_srr10608981.sh  setup_databases.sh  train_model.py
src/plasflow2/: __init__.py  cli.py  pipeline.py
src/plasflow2/annotate/: __init__.py  args.py  mge.py  mobility.py  taxonomy.py  vfdb.py
src/plasflow2/classify/: __init__.py  features.py  model.py  predict.py  train.py
src/plasflow2/report/: __init__.py  generator.py
src/plasflow2/risk/: __init__.py  scorer.py
src/plasflow2/utils/: __init__.py  device.py  fasta.py
tests/integration/: test_pipeline.py
tests/unit/: test_args.py  test_build_dataset.py  test_cli.py  test_fasta.py  test_features.py  test_mobility.py  test_pipeline.py  test_report.py  test_risk_scorer.py  test_taxonomy.py  test_train.py
