[tool.poetry]
name = "plasflow2"
version = "2.0.0-alpha"
description = "PlasFlow v2: plasmid/chromosome/phage/archaea classifier with ARG annotation and AMR risk scoring"
authors = ["Raza <shahbaz.invincible3182@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/smaegol/PlasFlow"
repository = "https://github.com/smaegol/PlasFlow"
keywords = ["bioinformatics", "plasmid", "metagenomics", "AMR", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# ML / numerics
torch = ">=2.0.0"
scikit-learn = ">=1.5.0"
numpy = ">=1.24.0"
scipy = ">=1.11.0"

# Bioinformatics
biopython = ">=1.82"
pyrodigal = ">=3.0.0"     # Prodigal ORF-caller Python wrapper

# CLI & output
click = ">=8.1.0"
tqdm = ">=4.66.0"

# Reporting
plotly = ">=5.18.0"
jinja2 = ">=3.1.0"
pandas = ">=2.1.0"

# Data
h5py = ">=3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=24.0.0"
ruff = ">=0.1.0"
mypy = ">=1.8.0"
pre-commit = ">=3.6.0"
ipykernel = ">=6.29.0"

[tool.poetry.scripts]
plasflow2 = "plasflow2.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=plasflow2 --cov-report=term-missing --cov-fail-under=0"
